logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T082108.185013+0000/task_id=create_postgres_table/attempt=1.log
[2023-09-02T08:21:09.763+0000] {logging_mixin.py:151} INFO - Changing /opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table permission to 509
[2023-09-02T08:21:09.764+0000] {logging_mixin.py:151} INFO - Failed to change /opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table'
[2023-09-02T08:21:09.799+0000] {logging_mixin.py:151} INFO - Changing /opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table permission to 509
[2023-09-02T08:21:09.800+0000] {logging_mixin.py:151} INFO - Failed to change /opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table'
[2023-09-02T08:21:09.848+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v01.create_postgres_table manual__2023-09-02T08:21:08.185013+00:00 [queued]>
[2023-09-02T08:21:09.861+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v01.create_postgres_table manual__2023-09-02T08:21:08.185013+00:00 [queued]>
[2023-09-02T08:21:09.862+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 6
[2023-09-02T08:21:09.881+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2023-09-02 08:21:08.185013+00:00
[2023-09-02T08:21:09.890+0000] {standard_task_runner.py:57} INFO - Started process 750 to run task
[2023-09-02T08:21:09.897+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v01', 'create_postgres_table', 'manual__2023-09-02T08:21:08.185013+00:00', '--job-id', '41', '--raw', '--subdir', 'DAGS_FOLDER/dag-postgres-operator.py', '--cfg-path', '/tmp/tmpq1ayvn3_']
[2023-09-02T08:21:09.901+0000] {standard_task_runner.py:85} INFO - Job 41: Subtask create_postgres_table
[2023-09-02T08:21:09.964+0000] {logging_mixin.py:151} INFO - Changing /opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table permission to 509
[2023-09-02T08:21:09.965+0000] {logging_mixin.py:151} INFO - Failed to change /opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2023-09-02T08:21:08.185013+00:00/task_id=create_postgres_table'
[2023-09-02T08:21:09.967+0000] {task_command.py:415} INFO - Running <TaskInstance: dag_with_postgres_operator_v01.create_postgres_table manual__2023-09-02T08:21:08.185013+00:00 [running]> on host 6c82fec646db
[2023-09-02T08:21:10.055+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='qpsss' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v01' AIRFLOW_CTX_TASK_ID='create_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2023-09-02T08:21:08.185013+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-09-02T08:21:08.185013+00:00'
[2023-09-02T08:21:10.056+0000] {sql.py:274} INFO - Executing: 
            create table if not exist dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, datg_ig)
            )
        
[2023-09-02T08:21:10.068+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-09-02T08:21:10.079+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-09-02T08:21:10.085+0000] {sql.py:418} INFO - Running statement: 
            create table if not exist dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, datg_ig)
            )
        , parameters: None
[2023-09-02T08:21:10.087+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "exist"
LINE 2:             create table if not exist dag_runs (
                                        ^

[2023-09-02T08:21:10.099+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v01, task_id=create_postgres_table, execution_date=20230902T082108, start_date=20230902T082109, end_date=20230902T082110
[2023-09-02T08:21:10.115+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 41 for task create_postgres_table (syntax error at or near "exist"
LINE 2:             create table if not exist dag_runs (
                                        ^
; 750)
[2023-09-02T08:21:10.150+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-09-02T08:21:10.168+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
